Try animation Jquery

--- a/views/index.html
+++ b/views/index.html
@@ -2,15 +2,18 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
     <link href="/styles.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/scripts.js"></script>
 
     <title>Animated Express n Js app</title>
 </head>
 <body>
     <div class="header">
-        <img src="/black-header.jpg" alt="No header image">
+        <div class="backgroundHeader"></div>
+        <div class="fade-in rectangle"></div>
     </div>
 </body>
 </html>
