--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,107 @@
-.header > img {
-    max-width: 100vw;
-    width: 100%;
-    height: 100vh;
+body {
+    margin: 0;
 }
+
+.header, .backgroundHeader {
+    max-width: 100vw;
+    height: 100vh;
+    background: no-repeat center black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.rectangle {
+    width: 160px;
+    height: 80px;
+    background-color: gold;
+    align-self: center;
+}
+
+.rectangleBorder {
+    width: 160px;
+    height: 80px;
+    border: gold solid 2px;
+    align-self: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ANIMATIONS */
+
+.fade-in {
+    animation: fadeIn ease 5s;
+    -webkit-animation: fadeIn ease 5s;
+    -moz-animation: fadeIn ease 5s;
+    -o-animation: fadeIn ease 5s;
+    -ms-animation: fadeIn ease 5s;
+    }
+    @keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+    }
+    
+    @-moz-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+    }
+    
+    @-webkit-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+    }
+    
+    @-o-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+    }
+    
+    @-ms-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+    }
+
+.fade-out {
+    animation: fadeOut ease 5s;
+    -webkit-animation: fadeOut ease 5s;
+    -moz-animation: fadeOut ease 5s;
+    -o-animation: fadeOut ease 5s;
+    -ms-animation: fadeOut ease 5s;
+    }
+    @keyframes fadeOut {
+    0% {opacity:1;}
+    100% {opacity:0;}
+    }
+    
+    @-moz-keyframes fadeOut {
+    0% {opacity:1;}
+    100% {opacity:0;}
+    }
+    
+    @-webkit-keyframes fadeOut {
+    0% {opacity:1;}
+    100% {opacity:0;}
+    }
+    
+    @-o-keyframes fadeOut {
+    0% {opacity:1;}
+    100% {opacity:0;}
+    }
+    
+    @-ms-keyframes fadeOut {
+    0% {opacity:1;}
+    100% {opacity:0;}
+    }
