--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <div class="backgroundHeader"></div>
-        <div class="fade-in rectangle"></div>
+        <div id="rectangle" ></div>
     </div>
 </body>
 </html>
