Add other route and file

--- a/views/home.html
+++ b/views/home.html
@@ -13,11 +13,12 @@
 <body>
     <div class="header">
         <div class="backgroundHeader"></div>
-        <div id="rectangle">
+        <div id="rectangleBorder">
             <div id="buttonText">
                 <a href="/home">CLIQUEZ</a>
             </div>
         </div>
     </div>
+    <div class="test">aozkepoqksdpokqspdok</div>
 </body>
 </html>
