--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,19 @@ body {
     margin: 0;
 }
 
+a, a:hover, a:active, a:visited, a:focus {
+    text-decoration:none;
+}
+
+#buttonText > a:visited {
+    color: gold;
+}
+
+#rectangle > #buttonText > a:visited {
+    /* display: none; */
+    color: black;
+}
+
 .header, .backgroundHeader {
     max-width: 100vw;
     height: 100vh;
@@ -16,6 +29,9 @@ body {
     height: 80px;
     background-color: gold;
     align-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #rectangleBorder {
@@ -23,6 +39,13 @@ body {
     height: 80px;
     border: gold solid 2px;
     align-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#buttonText {
+    color: gold;
 }
 
 
