Animation for home.js

--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="backgroundHeader"></div>
+        <!-- <div id="backgroundHeader"></div> -->
         <div id="rectangle">
             <div id="buttonText">
                 <a href="/home">CLIQUEZ</a>
