--- a/views/home.html
+++ b/views/home.html
@@ -6,17 +6,16 @@
 
     <link href="/styles.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/scripts.js"></script>
+    <!-- <script src="/scripts.js"></script> -->
     <script src="/home.js"></script>
 
     <title>Animated Express n Js app</title>
 </head>
 <body>
     <div class="header">
-        <!-- <div id="backgroundHeader"></div> -->
         <div id="rectangleBorder">
             <div id="buttonText">
-                <a href="/home">CLIQUEZ</a>
+                <a href="/home">Cliquez !</a>
             </div>
         </div>
     </div>
