--- a/views/index.html
+++ b/views/index.html
@@ -12,10 +12,9 @@
 </head>
 <body>
     <div class="header">
-        <!-- <div id="backgroundHeader"></div> -->
         <div id="rectangle">
             <div id="buttonText">
-                <a href="/home">CLIQUEZ</a>
+                <a href="/home"></a>
             </div>
         </div>
     </div>
