--- a/views/home.html
+++ b/views/home.html
@@ -6,7 +6,6 @@
 
     <link href="/styles.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- <script src="/scripts.js"></script> -->
     <script src="/home.js"></script>
 
     <title>Animated Express n Js app</title>
@@ -15,9 +14,14 @@
     <div class="header">
         <div id="rectangleBorder">
             <div id="buttonText">
-                <a href="/home">Cliquez !</a>
+                <a href="/home">CLIQUEZ !</a>
             </div>
         </div>
+    </div>
+    <div class="splittedContainer">
+        <div id="firstCol"></div>
+        <div id="secondCol"></div>
+        <div id="thirdCol"></div>
     </div>
 </body>
 </html>
