--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,10 +24,6 @@ a, a:hover, a:active, a:visited, a:focus {
     align-items: center;
 }
 
-/* #display {
-    display: flex;
-} */
-
 #rectangle {
     display: none;
     width: 160px;
@@ -62,10 +58,28 @@ a, a:hover, a:active, a:visited, a:focus {
     height: 0vh;
 }
 
+#firstCol > a {
+    height: 100vh;
+    display: inline-block;
+    width: 100%;
+}
+
+#firstCol.background {
+    background: no-repeat center blue;
+    width: 33.33%;
+    height: 100vh;
+}
+
 #secondCol {
     background: no-repeat center green;
     width: 33.33%;
     height: 0vh;
+}
+
+#secondCol.background {
+    background: no-repeat center green;
+    width: 33.33%;
+    height: 100vh;
 }
 
 #thirdCol {
@@ -74,6 +88,11 @@ a, a:hover, a:active, a:visited, a:focus {
     height: 0vh;
 }
 
+#thirdCol.background {
+    background: no-repeat center red;
+    width: 33.33%;
+    height: 100vh;
+}
 
 
 
