--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
 
     <link href="/styles.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/scripts.js"></script>
+    <script src="/index.js"></script>
     
     <title>Animated Express n Js app</title>
 </head>
