--- a/views/right.html
+++ b/views/right.html
@@ -6,22 +6,15 @@
 
     <link href="/styles.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/home.js"></script>
+    <script src="/right.js"></script>
 
     <title>Animated Express n Js app</title>
 </head>
 <body>
-    <div class="header">
-        <div id="rectangleBorder">
-            <div id="buttonText">
-                <a href="/home">CLIQUEZ !</a>
-            </div>
-        </div>
-    </div>
     <div class="splittedContainer">
-        <div id="firstCol"><a href="/left"></a></div>
-        <div id="secondCol"><a href="/middle"></a></div>
-        <div id="thirdCol"><a href="/right"></a></div>
+        <div id="firstCol" class="background"></div>
+        <div id="secondCol" class="background"></div>
+        <div id="thirdCol" class="background"></div>
     </div>
 </body>
 </html>
